写了员工上报功能，连接web端和小程序端
